# PhotoSend

./: build-profile.json5
AppScope/: app.json5
AppScope/resources/base/element/: string.json
entry/: build-profile.json5  readme.md
entry/libs/arm64-v8a/: libcurl.so.4  libexif.so.12  libexif.so.12.3.4  libgd.so.3.0.11  libgphoto2.so.6  libgphoto2.so.6.4.0  libgphoto2_port.so.12  libgphoto2_port.so.12.2.0  libjpeg.so.62  libjpeg.so.62.4.0  libltdl.so.7  libltdl.so.7.3.2  libpng16.so.16.40.0  libraw.so.23  libssl.so.1.1  libturbojpeg.so.0  libturbojpeg.so.0.3.0  libusb-1.0.so.0.4.0  libxml2.so.2  libxml2.so.2.12.5  libz.so.1.3.1
entry/libs/arm64-v8a/libgphoto2/: print-camera-list
entry/libs/arm64-v8a/libgphoto2/2.5.32.1/: ax203.la  canon.la  digigr8.la  dimagev.la  directory.la  docupen.la  jl2005a.la  jl2005c.la  kodak_dc240.la  lumix.la  mars.la  pentax.la  ptp2.la  quicktake1x0.la  ricoh_g3.la  sierra.la  sonix.la  sq905.la  st2205.la  topfield.la  tp6801.la
entry/src/main/: module.json5
entry/src/main/cpp/: CMakeLists.txt  napi_init.cpp  native_camera.cpp
entry/src/main/cpp/Camera/: camera_callback.h  camera_capture.cpp  camera_capture.h  camera_common.h  camera_config.cpp  camera_config.h  camera_device.cpp  camera_device.h  camera_download.cpp  camera_download.h  camera_preview.cpp  camera_preview.h  exif_reader.cpp  exif_reader.h  frame_processor.h  native_camera.cpp  native_camera.h  native_common.cpp  native_common.h
entry/src/main/cpp/Camera/Application/: nativeCamera.cpp  nativeCamera.h
entry/src/main/cpp/Camera/Bridge/: nativeCameraBridge.cpp
entry/src/main/cpp/Camera/CameraDownloadKit/: camera_download.cpp  camera_download.h
entry/src/main/cpp/Camera/CameraDownloadKit/PhotoDownloader/: PhotoDownloader.cpp  PhotoDownloader.h
entry/src/main/cpp/Camera/CameraDownloadKit/PhotoScanner/: PhotoScanner.cpp  PhotoScanner.h
entry/src/main/cpp/Camera/CameraDownloadKit/ThumbnailDownloader/: ThumbnailDownloader.cpp  ThumbnailDownloader.h
entry/src/main/cpp/Camera/Common/: Constants.h  native_common.cpp  native_common.h
entry/src/main/cpp/Camera/Core/Capture/: camera_capture.cpp  camera_capture.h  camera_preview.cpp
entry/src/main/cpp/Camera/Core/Config/: camera_config.cpp  camera_config.h
entry/src/main/cpp/Camera/Core/Device/: CameraDeviceManager.cpp  CameraDeviceManager.h  ConnectionManager.cpp  ConnectionManager.h  DeviceScanner.cpp  DeviceScanner.h  NapiDeviceInterface.cpp  NapiDeviceInterface.h  cameraDevice.cpp
entry/src/main/cpp/Camera/Core/Media/: ExifProcessor.cpp  ExifProcessor.h
entry/src/main/cpp/Camera/Core/Types/: CameraTypes.h
entry/src/main/cpp/libs/include/gphoto2/: gphoto2-abilities-list.h  gphoto2-camera.h  gphoto2-result.h  gphoto2-version.h  gphoto2.h
entry/src/main/cpp/libs/include/libgphoto2_port/gphoto2/: gphoto2-port-info-list.h  gphoto2-port.h
entry/src/main/cpp/types/libentry/: Index.d.ts
entry/src/main/ets/: types.ets
entry/src/main/ets/CustomTransition/: AnimationProperties.ets  CustomNavigationUtils.ets
entry/src/main/ets/NodeContainer/: CustomComponent.ets
entry/src/main/ets/common/: GlobalPhotoStore.ets
entry/src/main/ets/component/CameraControlDialog/: ApertureDialog.ets  CameraIsoDialog.ets  ExposureCompensationDialog.ets  ExposureMeterModeDialog.ets  ExposureModeDialog.ets  FeedbackDialog.ets  FocusModeDialog.ets  IsoDialog.ets  ShutterSpeedDialog.ets  WhiteBalanceDialog.ets
entry/src/main/ets/entryability/: EntryAbility.ets
entry/src/main/ets/managers/: CameraStateManager.ets
entry/src/main/ets/pages/: CameraPage.ets  CameraPagePreview.ets  FilePage.ets  HomePage.ets  MinePage.ets  NikonDeviceHelper.ets  PhoneLocalPictures.ets  PhonePage.ets  PicturesPage.ets  RemoteControl.ets  RemoteControlPreview.ets  RemoteTest.ets
entry/src/main/ets/pages/CamPhotoPreAndDownload/: BigImagePage.ets  BigImagePagePreview.ets  CamPhotoPrePage.ets  CamPhotoPrePagePreview.ets
entry/src/main/ets/pages/CameraPage/: CameraPage.ets  CameraPagePreview.ets
entry/src/main/ets/pages/CameraPcituresPage/: BigImagePage.ets  CameraPicturesPage.ets  CameraPicturesPagePreview.ets
entry/src/main/ets/types/: CameraTypes.ets  types.ets
entry/src/main/ets/utils/: CamConnectManager.ets  CameraHelper.ets  CameraParamManager.ets  CreateLocalDir.ets  LanScanner.ets  cam_connect_type.ets
entry/src/main/ets/workers/: CheckConnection.ets  DownloadMessage.ets
(+17 files in other folders)
